// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CoreTooltip renders properly 1`] = `
<Tooltip
  mouseEnterDelay={0.3}
  overlayClassName="core-tooltip"
  placement="right"
  title="tooltip title"
>
  <ForwardRef(InfoCircleOutlined)
    className="info-tooltip icon-sm"
    style={
      Object {
        "color": "white",
      }
    }
  />
</Tooltip>
`;

exports[`NOWFieldOriginTooltip renders properly 1`] = `
<Tooltip
  mouseEnterDelay={0.3}
  placement="right"
  title="This field was not being sent by NROS or vFCBC. Only applications pushed directly from vFCBC will have this value. Open the original PDF to see the data."
>
  <ForwardRef(WarningOutlined)
    className="info-tooltip icon-sm"
  />
</Tooltip>
`;

exports[`NOWOriginalValueTooltip renders properly 1`] = `
<Tooltip
  className="position-right"
  mouseEnterDelay={0.3}
  placement="right"
  title="Original Value: mock value"
/>
`;
